# project-chaggg

./: .gitignore  README.md  cleaning_decisions.md  max_heap.py  pyproject.toml  run_app.py  test_date_filter.py
algorithms/: knn_sklearn.py
data/: clean.py  fetch.py
notebooks/: 01_download_data.ipynb  angel_sandbox.ipynb  gasyakoc_sandbox.ipynb  grace_sandbox.ipynb  gracew_sandbox.ipynb  gustavo_pipeline.ipynb  gustavo_sandbox.ipynb  yuri_sandbox.ipynb
notebooks/Carl/: raw_sandbox.ipynb
old_stuff/: distance.py
retrospectives/: grace.md  yuri.md
scripts/: clean.py  config.py  generate_map_data.py  main.py  precompute_knn_arrays.py  utils.py
src/: __init__.py  crime_knn.py  crime_knn_sklearn.py  fetch.py  preprocess_data.py
src/flask_app/: __init__.py  data.py  estimators.py  max_heap.py
src/flask_app/algorithms/: knn_lrr.py
src/flask_app/scripts/: config.py  estimators.py  fetch.py  geojson_to_svg.py  utils.py
src/flask_app/static/css/: main.css
src/flask_app/static/data/space/: community_stats_by_year.json
src/flask_app/templates/: about.html  algorithm.html  base.html  codebook.html  dashboards.html  index.html  method.html  overview.html  viz_placeholder.html
src/flask_app/templates/dashboards/: _space_content.html  _time_content.html  algorithm.html  space.html  time.html  types.html
tests/: test_clean.py  test_estimators.py  test_flask_routes.py  test_knn_sklearn.py  test_load_crime_artifacts.py  test_precompute_knn_arrays.py  test_utils.py  tests_distance.py  tests_utils.py
